--- a/html5-css3-sample/sample/0530/style.css
+++ b/html5-css3-sample/sample/0530/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: 10px;
     line-height: 1.5;
+    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "MS P ゴシック", "Helvetica Neue", "Helvetica", "sans-serif";
 }
 
 h1 {
